# chip8-emulator

./: .gitignore  CMakeLists.txt
src/: Chip8.cpp  Chip8.h  Platform.cpp  Platform.h
